<resources>
    <string name="app_name">Alu the Great</string>

    <string name="calculator">Calculator</string>
    <string name="form">Form</string>
    <string name="fragment">Fragment</string>

    <string name="formButton">gotoForm</string>
    <string name="calculatorButton">gotoForm</string>
    //TextViews
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="hobbies">Hobbies</string>
    <string name="your_data">Your Data</string>
    <string name="see_data_here">See Data Here</string>

    //Radio Button
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>

    //CheckBox
    <string name="sports">Sports</string>
    <string name="gaming">Gaming</string>

    //Hint
    <string name="email_hint">example@gmail.com</string>
    <string name="full_name_hint">Full Name</string>
    <string name="username_hint">username</string>

    //Button
    <string name="button_text">Show Data</string>
    <string name="button_text_here">Show Data On This Screen</string>

    //Calculator
    <string name="back">Go Back</string>
    //TextViews
    <string name="num1">First Num</string>
    <string name="num2">Second Num</string>
    <string name="result">Result</string>

    //EditText
    <string name="_2">2</string>

    //Button
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>

    //Fragments

    <string name="hello_first_fragment">Hello First fragment</string>
    <string name="hello_second_fragment">Hello Second fragment</string>
    <string name="hello_third_fragment">Hello Third fragment</string>



</resources>