<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

  <TableLayout
      android:layout_width="352dp"
      android:layout_height="502dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.562"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.307">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/textUsername"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/username"
          android:textSize="20sp" />

      <EditText
          android:id="@+id/Username"
          android:layout_width="222dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="@string/username"
          android:ems="10"
          android:hint="@string/username_hint"
          android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="107dp">

      <TextView
          android:id="@+id/textEmail"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/email"
          android:textSize="20sp" />

      <EditText
          android:id="@+id/Email"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints=""
          android:ems="10"
          android:hint="@string/email_hint"
          android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/gender"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/gender"
          android:textSize="20sp" />

      <RadioGroup
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/others" />
      </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/hobbies"
          android:layout_width="177dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="@string/hobbies"
          android:textSize="20sp"
          android:visibility="visible" />

      <CheckBox
          android:id="@+id/sports"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/sports" />

      <CheckBox
          android:id="@+id/gaming"
          android:layout_width="127dp"
          android:layout_height="wrap_content"
          android:text="@string/gaming" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <Button
          android:id="@+id/ShowData"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:onClick="showDataInNextScreen"
          android:text="@string/button_text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

      <Button
          android:id="@+id/ShowData2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/button_text_here" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="88dp">

      <TextView
          android:id="@+id/see_data_here"
          android:layout_width="341dp"
          android:layout_height="117dp"
          android:text="@string/see_data_here" />
    </TableRow>

  </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>