<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textFullName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/FullName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints="@string/full_name_hint"
                android:hint="@string/full_name_hint"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/username" />

            <EditText
                android:id="@+id/Username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints="@String/username_hint"
                android:ems="10"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email" />

            <EditText
                android:autofillHints=""
                android:hint="@string/email_hint"
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAccessibility="yes"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ShowData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text" />

            <TextView
                android:id="@+id/YourData"
                android:textColor="@color/material_dynamic_primary50"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/your_data" />


        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>